<resources>
    <string name="app_name">ShortestTour</string>

    <string-array name="countries_array">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>American Samoa</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Anguilla</item>
        <item>Antarctica</item>
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>American Samoa</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Anguilla</item>
        <item>Antarctica</item>
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>American Samoa</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Anguilla</item>
        <item>Antarctica</item>
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>American Samoa</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Anguilla</item>
        <item>Antarctica</item>
    </string-array>
    <string name="hello">hello</string>

    <string name="driving">Driving</string>
    <string name="add_place">Add Place</string>
    <string name="no_place">No Place</string>
    <string name="going_to">Going to %s</string>
    <string name="search_here">Search Here</string>
    <string name="total_duration">Total Duration : %s</string>
    <string name="total_distance">Total Distance : %s</string>
    <string name="loading">Loading...</string>
    <string name="km">km</string>
    <string name="m">m</string>
    <string name="min">min</string>
    <string name="hr">hr</string>
    <string name="show_in_map">Show in Map</string>
    <string name="add_to_list">Add to List</string>
    <string name="places">%d places</string>
    <string name="prepare_to_find_path">Preparing to find %s\'s paths</string>
    <string name="finding_path">Finding paths for %s</string>
    <string name="added_to_list">%s is added to list</string>
</resources>
