<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="60"
            android:padding="@dimen/margin_medium"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/text_num_place"
                android:text="@string/no_place"
                android:layout_margin="@dimen/margin_small"
                android:textSize="@dimen/text_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:visibility="gone"
                android:id="@+id/text_going_to"
                android:text="@string/going_to"
                android:layout_margin="@dimen/margin_small"
                android:textSize="@dimen/text_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="40"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/margin_medium"
            android:gravity="center_vertical|right">
            <TextView
                android:id="@+id/btn_add"
                android:text="@string/add_place"
                android:padding="10dp"
                android:textSize="@dimen/text_small"
                android:layout_margin="@dimen/margin_small"
                android:background="@drawable/filter_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true" />
            <TextView
                android:visibility="gone"
                android:id="@+id/text_total_time"
                android:text="@string/total_duration"
                android:textSize="@dimen/text_small"
                android:layout_margin="@dimen/margin_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:visibility="gone"
                android:id="@+id/text_total_distance"
                android:text="@string/total_distance"
                android:textSize="@dimen/text_small"
                android:layout_margin="@dimen/margin_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:visibility="gone"
                android:id="@+id/text_loading"
                android:text="@string/loading"
                android:textSize="@dimen/text_small"
                android:layout_margin="@dimen/margin_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

</LinearLayout>